navegacion movil y terminos legales

--- a/src/app/components/cursos/cursos.component.scss
+++ b/src/app/components/cursos/cursos.component.scss
@@ -3,12 +3,15 @@
 #header{
     height: 35vh;
     background-size: cover !important;
-    background-image: url('/assets/img/bannerDeporte.png') !important;
+    background-image: url('/assets/img/cursos/bannerCursos2.png') !important;
     min-height: 188px !important;
     max-height: 220px;
-    color: red;
 }
 
 .container {
-    transform: translatey(-200%)
+    transform: translatey(-200%);
+  }
+
+  h1{
+      color: $fondo;
   }
