--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,44 +1,42 @@
 <footer class="site-footer" role="contentinfo">
   <div class="container">
-      <div class="row">
-        
-        <!-- Información general de contacto -->
-        <div class="col-sm-6" style="float:left; display:block; padding-top: 20px">
-          <h3>Información de contacto</h3>
-          <hr>
-          <span>Dirección: </span><span class="text-white">Lucena  </span>
-          <span>Teléfono: </span><span class="text-white">+34 666 666 666  </span>
-          <span>Email: </span><span class="text-white">infinity@work.com</span>
+    <div class="row">
 
-          <!-- Iconos de redes sociales -->
-          <ul class="list-unstyled footer-link footer-social">
-              <a href="https://twitter.com/?lang=es" class="p-1"><span class="fab fa-twitter"></span></a>
-              <a href="https://es-es.facebook.com/" class="p-1"><span class="fab fa-facebook"></span></a>
-              <a href="https://es.linkedin.com" class="p-1"><span class="fab fa-linkedin"></span></a>
-              <a href="https://www.instagram.com/?hl=es" class="p-1"><span class="fab fa-instagram"></span></a>
-          </ul>
-        </div>
+      <!-- Información general de contacto -->
+      <div class="col-sm-6" style="float:left; display:block; padding-top: 20px">
+        <h3>Información de contacto</h3>
+        <hr>
+        <span>Dirección: </span><span class="text-white">Lucena </span>
+        <span>Teléfono: </span><span class="text-white">+34 666 666 666 </span>
+        <span>Email: </span><span class="text-white">infinity@work.com</span>
 
-        <!-- Enlaces -->
-        <div class="col-sm-6 footer-info" style=" display:block; padding-top: 20px; align-content: center">
-          <h3>Accesos rápidos</h3>
-          <hr>
-          <a href="terminos">Términos de uso</a><br>
-          <a href="contacto">Contacto</a><br><br>
-        </div>
+        <!-- Iconos de redes sociales -->
+        <ul class="list-unstyled footer-link footer-social">
+          <a href="https://twitter.com/?lang=es" class="p-1"><span class="fab fa-twitter"></span></a>
+          <a href="https://es-es.facebook.com/" class="p-1"><span class="fab fa-facebook"></span></a>
+          <a href="https://es.linkedin.com" class="p-1"><span class="fab fa-linkedin"></span></a>
+          <a href="https://www.instagram.com/?hl=es" class="p-1"><span class="fab fa-instagram"></span></a>
+        </ul>
       </div>
 
-      <!-- Pie de página copyright -->
-      <div class="container" align="center">
-          <div class="row">
-              <div class="col-sm-12 text-sm-center text-center" >
-                  <p><a class="easter" href="fgame">&copy;</a>Copyright &copy;2018 Todos los derechos <a class="easter" href="jcgame">&copy;</a> reservados</p>
-              </div>
-          </div>
+      <!-- Enlaces -->
+      <div class="col-sm-6 footer-info" style=" display:block; padding-top: 20px; align-content: center">
+        <h3>Accesos rápidos</h3>
+        <hr>
+        <a [routerLink]="['/terminos_legales']">Términos de uso</a><br>
+        <a href="contacto">Contacto</a><br><br>
       </div>
-
     </div>
-  </footer>
-    
 
+    <!-- Pie de página copyright -->
+    <div class="container" align="center">
+      <div class="row">
+        <div class="col-sm-12 text-sm-center text-center">
+          <p><a class="easter" href="fgame">&copy;</a>Copyright &copy;2018 Todos los derechos <a class="easter" href="jcgame">&copy;</a>
+            reservados</p>
+        </div>
+      </div>
+    </div>
 
+  </div>
+</footer>
