--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,42 +1,6 @@
- <!-- Slide Menu-->
-<aside class="side-menu__container" [ngClass]="{'side-menu__container-active': showMenu}" (click)="toggleMenu()">
-  <nav class="slide-menu" [ngClass]="{'slide-menu-active': showMenu}" (click)="$event.stopImmediatePropagation();">
-      <section class="menu-header">
-        <a class="navbar-brand ml-3 justify-content-center" href="#"><img src="/assets/img/LOGO_BLANCO.png" width="50px"></a>
-        <span class="greeting__text">Menu</span>
-      </section>
-      <section class="menu-body">
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">
-            <a class="nav-link" (click)="toggleMenu()" data-toggle="collapse" [routerLink]="['/']">Inicio <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="list-group-item">
-            <a class="nav-link dropdown-toggle" (click)="toggleDropDown()">Servicios</a>
-            <div class="dropdown-container" *ngIf="showDropDown" (click)="toggleMenu()">
-              <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/noticias']">Noticias</a>
-              <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/cursos']">Cursos</a>
-              <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/nuestras_instalaciones']">Nuestras Instalaciones</a>
-              <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/recursos']">Recursos</a>
-            </div>
-          </li>
-          <li class="list-group-item">
-            <a class="nav-link" (click)="toggleMenu()" data-toggle="collapse" [routerLink]="['/contacto']">Contacto</a>
-          </li>
-        </ul>
-        <div class="form-inline my-2 my-lg-0 justify-content-center">
-          <button (click)="toggleMenu()" class="btn btn-danger mr-2 my-2 my-sm-0" data-toggle="modal" data-target="#modalLoginForm" >Login</button>
-          <button (click)="toggleMenu()" class="btn btn-danger my-2 my-sm-0" data-toggle="modal" data-target="#modalSignInForm" >Sign in</button>
-        </div>
-      </section>
-      <section class="menu-footer">
-  
-      </section>
-  </nav>
-</aside>
-
 <!--Inicio navBar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" [ngClass]="{'scrolled': scrolled}">
-  <button class="navbar-toggler" (click)="toggleMenu()" type="button" data-toggle="collapse">
+  <button class="navbar-toggler" (click)="openNav()" type="button" data-toggle="collapse">
     <span class="navbar-toggler-icon"></span>
   </button>
   <a class="navbar-brand ml-3" href="#"><img src="/assets/img/LOGO_BLANCO.png" width="50px"></a>
@@ -54,7 +18,6 @@
           <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/noticias']">Noticias</a>
           <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/cursos']">Cursos</a>
           <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/nuestras_instalaciones']">Nuestras Instalaciones</a>
-          <a class="dropdown-item texto-subtitulos" data-toggle="collapse" [routerLink]="['/recursos']">Recursos</a>
         </div>
       </li>
       <li class="nav-item" routerLinkActive="active">
@@ -68,6 +31,47 @@
   </div>
 </nav>
 <!--Fin navBar-->
+
+<div id="myNav" class="overlay">
+
+    <!-- Button to close the overlay navigation -->
+    <a href="javascript:void(0)" class="closebtn" (click)="closeNav()">&times;</a>
+  
+    <!-- Overlay content -->
+    <div class="overlay-content">
+        <ul>
+            <li>
+              <a (click)="closeNav()" data-toggle="collapse" [routerLink]="['/']">Inicio <span class="sr-only">(current)</span></a>
+            </li>
+            <li >
+              <a (click)="toggleDropDown()">Servicios</a>
+              <div *ngIf="showDropDown">
+                <hr>
+                <ul>
+                  <li>
+                    <a (click)="closeNav()" data-toggle="collapse" [routerLink]="['/noticias']">Noticias</a>
+                  </li>
+                  <li>
+                    <a (click)="closeNav()" data-toggle="collapse" [routerLink]="['/cursos']">Cursos</a>
+                  </li>
+                  <li>
+                    <a (click)="closeNav()" data-toggle="collapse" [routerLink]="['/nuestras_instalaciones']">Instalaciones</a>
+                  </li>
+                  <li>
+                    <a (click)="closeNav()" data-toggle="collapse" [routerLink]="['/recursos']">Recursos</a>
+                  </li>
+                </ul>
+                <hr>
+              </div>
+            </li>
+            <li >
+              <a class="nav-link" (click)="closeNav()" data-toggle="collapse" [routerLink]="['/contacto']">Contacto</a>
+            </li>
+          </ul>      
+    </div>
+  
+  </div>
+
 
 <!--Inicio ventana emergente de login-->
 <div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
