--- a/src/app/components/nav-bar/nav-bar.component.scss
+++ b/src/app/components/nav-bar/nav-bar.component.scss
@@ -25,133 +25,68 @@
     color: $color_letras !important; 
   }
 
-  /*
-    Slide Menu
-= = = = = = = = =
-*/
-.menu-body .nav-link{
-  color: $fondo_footer !important;
-}
 
-.side-menu__container {
-  position: fixed;
+/* The Overlay (background) */
+.overlay {
+  /* Height & width depends on how you want to reveal the overlay (see JS below) */    
+  height: 100%;
+  width: 0;
+  position: fixed; /* Stay in place */
+  z-index: 25; /* Sit on top */
   left: 0;
   top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  pointer-events: none;
-  z-index: 25;
+  background-color: rgb(0,0,0); /* Black fallback color */
+  background-color: rgba(0,0,0, 0.95); /* Black w/opacity */
+  overflow-x: hidden; /* Disable horizontal scroll */
+  transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
 }
 
-.side-menu__container-active {
-  pointer-events: auto;
+hr{
+  background-color: white;
 }
 
-.side-menu__container::before {
-  content: '';
-  cursor: pointer;
-  position: absolute;
-  display: block;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  background-color: $fondo_footer;
-  opacity: 0;
-  transition: opacity 300ms linear;
-  will-change: opacity;
-}
-
-.side-menu__container-active::before {
-  opacity: 0.3;
-}
-
-.slide-menu {
-  box-sizing: border-box;
-  transform: translateX(-103%);
+/* Position the content inside the overlay */
+.overlay-content {
   position: relative;
-  top: 0;
-  left: 0;
-  z-index: 10;
-  height: 100%;
-  width: 90%;
-  max-width: 26rem;
-  background-color: white;
-
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 2fr 4fr 1fr;
-  grid-gap: 1rem;
-  transition: transform 300ms linear;
-  will-change: transform;
+  top: 25%; /* 25% from the top */
+  width: 100%; /* 100% width */
+  text-align: center; /* Centered text/links */
+  margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
 }
 
-.slide-menu-active {
-  transform: none;
-}
-
-.menu-header {
-  background: $fondo_footer;
-  display: grid;
-  width: 100%;
-  align-content: center;
+/* The navigation links inside the overlay */
+.overlay a {
+  padding: 8px;
+  text-decoration: none;
+  font-size: 36px;
   color: white;
-
+  display: block; /* Display block instead of inline */
+  transition: 0.3s; /* Transition effects on hover (color) */
 }
 
-.greeting__text {
-  grid-area: greeting;
-  font-size: 1.25rem;
-  letter-spacing: 0.15rem;
-  text-transform: uppercase;
-  margin-top: 1rem;
-  justify-self: center;
-  align-self: center;
+/* When you mouse over the navigation links, change their color */
+// .overlay a:hover, .overlay a:focus {
+//   color: red;
+// }
+
+/* Position the close button (top right corner) */
+.overlay .closebtn {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
 }
 
-.account-details {
-  grid-area: details;
-  display: flex;
-  flex-flow: column;
-  margin-left: 1rem;
-  align-self: center;
+/* When the height of the screen is less than 450 pixels, change the font-size of the links and position the close button again, so they don't overlap */
+@media screen and (max-height: 450px) {
+  .overlay a {font-size: 20px}
+  .overlay .closebtn {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
 }
-
-.name__text {
-  font-size: 1.15rem;
-  margin-bottom: 0.5rem;
-}
-
-.email__text {
-  font-size: 0.9rem;
-  letter-spacing: 0.1rem;
-}
-
-.menu-body {
-  display: grid;
-  width: 100%;
-}
-
-.profile-image__container {
-  grid-area: image;
-  margin-right: 0.5rem;
-  border-radius: 50%;
-  height: 4rem;
-  width: 4rem;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: white;
-  align-self: center;
-  margin-left: 2rem;
-}
-
-.profile__image {
-  max-width: 4rem;
-}
-
+  
 
 //-----------Dropdown Styles----------//
 .dropdown-menu, .dropdown-item{
