--- a/src/app/components/recursos/recursos.component.html
+++ b/src/app/components/recursos/recursos.component.html
@@ -1,7 +1,7 @@
 <div id="header">
   
 </div>
-<div class="container text-center"><h1>Recursos</h1></div>
+<div class="container text-center"><h1>Términos</h1></div>
 <div class="mt-2">
   <app-item-list [parent]=this.id></app-item-list>
 </div>
