--- a/src/app/components/nuestras-instalaciones/nuestras-instalaciones.component.scss
+++ b/src/app/components/nuestras-instalaciones/nuestras-instalaciones.component.scss
@@ -3,7 +3,7 @@
 #header{
     height: 35vh;
     background-size: cover !important;
-    background-image: url('/assets/img/bannerDeporte.png') !important;
+    background-image: url('/assets/img/ninstalaciones/bannerInstalaciones.jpg') !important;
     min-height: 188px !important;
     max-height: 220px;
 }
@@ -78,4 +78,8 @@ button:hover {
 
 #volume-bar {
 	width: 50px;
+}
+
+h1{
+	color: $fondo;
 }
