--- a/src/app/components/noticias/noticias.component.scss
+++ b/src/app/components/noticias/noticias.component.scss
@@ -3,7 +3,7 @@
 #header{
     height: 35vh;
     background-size: cover !important;
-    background-image: url('/assets/img/bannerDeporte.png') !important;
+    background-image: url('/assets/img/noticias/bannerNoticias.png') !important;
     min-height: 188px !important;
     max-height: 220px;
 }
@@ -11,3 +11,7 @@
 .container {
     transform: translatey(-200%)
   }
+
+h1{
+    color: $fondo;
+}
