--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div [ngClass]="{'col-xl-6': !seeMore,'col-xl-12': seeMore, 'col-12': true}">
-            <img src="../../../assets/img/{{id}}/{{imagen}}">
+            <img src="{{imageURL}}">
         </div>       
        <div [ngClass]="{'col-xl-6': !seeMore,'col-xl-12': seeMore, 'col-12': true}">
             <div class="row">
