--- a/src/app/components/login-sign/login-sign.component.html
+++ b/src/app/components/login-sign/login-sign.component.html
@@ -1,50 +1,84 @@
 <div id="header">
   
 </div>
-<div class="mb-5">
-  <div class="container h-100">
-    <div class="d-flex justify-content-center h-100">
-      <div class="user_card">
-        <div class="d-flex justify-content-center">
-          <div class="brand_logo_container">
-            <img src="" class="brand_logo" alt="Logo">
-          </div>
+<div class="form">
+      
+  <ul class="tab-group">
+    <li class="tab active"><a href="#signup">Sign Up</a></li>
+    <li class="tab"><a href="#login">Log In</a></li>
+  </ul>
+  
+  <div class="tab-content">
+    <div id="signup">   
+      <h1>Sign Up for Free</h1>
+      
+      <form action="/" method="post">
+      
+      <div class="top-row">
+        <div class="field-wrap">
+          <label>
+            First Name<span class="req">*</span>
+          </label>
+          <input type="text" required autocomplete="off" />
         </div>
-        <div class="d-flex justify-content-center form_container">
-          <form>
-            <div class="input-group mb-3">
-              <div class="input-group-append">
-                <span class="input-group-text"><i class="fas fa-user"></i></span>
-              </div>
-              <input type="text" name="" class="form-control input_user" value="" placeholder="username">
-            </div>
-            <div class="input-group mb-2">
-              <div class="input-group-append">
-                <span class="input-group-text"><i class="fas fa-key"></i></span>
-              </div>
-              <input type="password" name="" class="form-control input_pass" value="" placeholder="password">
-            </div>
-            <div class="form-group">
-              <div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="customControlInline">
-                <label class="custom-control-label" for="customControlInline">Remember me</label>
-              </div>
-            </div>
-          </form>
-        </div>
-        <div class="d-flex justify-content-center mt-3 login_container">
-          <button type="button" name="button" class="btn login_btn">Login</button>
-        </div>
-        <div class="mt-4">
-          <div class="d-flex justify-content-center links">
-            Don't have an account? <a href="#" class="ml-2">Sign Up</a>
-          </div>
-          <div class="d-flex justify-content-center links">
-            <a href="#">Forgot your password?</a>
-          </div>
+    
+        <div class="field-wrap">
+          <label>
+            Last Name<span class="req">*</span>
+          </label>
+          <input type="text"required autocomplete="off"/>
         </div>
       </div>
+
+      <div class="field-wrap">
+        <label>
+          Email Address<span class="req">*</span>
+        </label>
+        <input type="email"required autocomplete="off"/>
+      </div>
+      
+      <div class="field-wrap">
+        <label>
+          Set A Password<span class="req">*</span>
+        </label>
+        <input type="password"required autocomplete="off"/>
+      </div>
+      
+      <button type="submit" class="button button-block">Get Started</button>
+      
+      </form>
+
     </div>
-  </div>
-</div>
+    
+    <div id="login">   
+      <h1>Welcome Back!</h1>
+      
+      <form action="/" method="post">
+      
+        <div class="field-wrap">
+        <label>
+          Email Address<span class="req">*</span>
+        </label>
+        <input type="email"required autocomplete="off"/>
+      </div>
+      
+      <div class="field-wrap">
+        <label>
+          Password<span class="req">*</span>
+        </label>
+        <input type="password"required autocomplete="off"/>
+      </div>
+      
+      <p class="forgot"><a href="#">Forgot Password?</a></p>
+      
+      <button class="button button-block">Log In</button>
+      
+      </form>
+
+    </div>
+    
+  </div><!-- tab-content -->
+  
+</div> <!-- /form -->
+
 <app-footer></app-footer>
