añadir referencia al navBar en el servicio

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <section>
-<app-nav-bar></app-nav-bar>
+<app-nav-bar #navBar></app-nav-bar>
 <router-outlet></router-outlet>
 </section>
