--- a/src/app/components/login-sign/login-sign.component.scss
+++ b/src/app/components/login-sign/login-sign.component.scss
@@ -17,9 +17,12 @@ $bold: 600;
 $br: 4px;
 
 #header{
-    height: 20vh;
+    height: 12vh;
     // min-height: 188px !important;
     // max-height: 220px;
+    @media only screen and (max-width: 992px) {
+      height: 8vh;
+  }
 }
 
 *, *:before, *:after {
