--- a/src/app/components/recursos/recursos-list/recursos-list.component.html
+++ b/src/app/components/recursos/recursos-list/recursos-list.component.html
@@ -5,3 +5,6 @@
       </div>
     </div>
   </div>
+  <div id="carga" class="d-flex justify-content-center align-items-center mb-5">
+      <div class="spinner-border text-danger"></div>
+  </div>
