--- a/src/app/components/recursos/recursos-list/recursos-list.component.html
+++ b/src/app/components/recursos/recursos-list/recursos-list.component.html
@@ -1,7 +1,10 @@
-<div class="container">
+<div class="d-none" id="contenido">
     <div class="row" >    
       <div class="col-md-6 mb-4 card" *ngFor="let item of items">
           <app-recursos-item [imagen]=item.image [tittle]=item.tittle [description]=item.description [origen]=item.origen></app-recursos-item>
       </div>
     </div>
-  </div>
+</div>
+<div id="carga" class="container d-flex justify-content-center align-items-center">
+        <img src="../../../assets/img/loading.gif">
+</div>
