Add item con foto

--- a/src/app/components/firebase/files/files.component.html
+++ b/src/app/components/firebase/files/files.component.html
@@ -1,4 +1,4 @@
 <div class="container-fluid mt-5">
   <input type="file" (change)="getFile($event)"><br>
-  <button (click)="uploadFile()">Subir archivo</button>
+  <button (click)="uploadFile('noticias')">Subir archivo</button>
 </div>
