--- a/src/app/components/login-sign/login-sign.component.html
+++ b/src/app/components/login-sign/login-sign.component.html
@@ -36,7 +36,7 @@
           <label>
             Email Address<span class="req">*</span>
           </label>
-          <input type="email"required autocomplete="off"/>
+          <input type="email" required autocomplete="off"/>
         </div>
         
         <div class="field-wrap">
@@ -55,27 +55,28 @@
       <div id="login">   
         <h1>Welcome Back!</h1>
         
-        <form action="/" method="post">
+        <div>
         
           <div class="field-wrap">
           <label>
             Email Address<span class="req">*</span>
           </label>
-          <input type="email"required autocomplete="off"/>
+          <input type="email" #userEmail required autocomplete="off"/>
         </div>
         
         <div class="field-wrap">
           <label>
             Password<span class="req">*</span>
           </label>
-          <input type="password"required autocomplete="off"/>
+          <input type="password" #userPassword required autocomplete="off"/>
         </div>
         
         <p class="forgot"><a href="#">Forgot Password?</a></p>
         
-        <button class="button button-block">Log In</button>
-        
-        </form>
+        <!-- <button class="button button-block">Log In</button> -->
+        <button  class="button button-block"  (click)="login(userEmail.value, userPassword.value)">Logiin</button> 
+
+      </div>
   
       </div>
       
