Implementación de cookies

--- a/src/app/components/cookies/cookies.component.html
+++ b/src/app/components/cookies/cookies.component.html
@@ -1,9 +1,8 @@
 <div class="alert text-center cookiealert" role="alert">
-  Este sitio web utiliza cookies para mejorar su exeriencia de uso.
-  <button type="button" class="btn btn-primary btn-sm acceptcookies" aria-label="Close">
-      Deseo ir directamente a la pantalla de login
+  Este sitio web utiliza cookies para mejorar su experiencia de uso.
+  <button type="button" class="btn btn-danger btn-sm acceptcookies" aria-label="Close">
+      Aceptar
   </button>
-  <button id="rejectcookie" type="button" class="btn btn-danger btn-sm" aria-label="Close">
-      NO Deseo ir directamente a la pantalla de login
-  </button>
+  <i id="rejectcookie" class="btn fas fa-times ml-2"></i>
+
 </div>
