--- a/src/app/components/firebase/firebase.component.html
+++ b/src/app/components/firebase/firebase.component.html
@@ -1,4 +1,5 @@
 <div class="container mt-5 text-center">
+  <h2>El usuario es admin: {{isAdmin}}</h2>
   <br>
   <div style="display: inline-block">  
     <button (click)="toggleContenido()" class="ml-2 mt-3 btn btn-danger" >Contenido</button>
