--- a/src/app/components/login-sign/login-sign.component.html
+++ b/src/app/components/login-sign/login-sign.component.html
@@ -4,6 +4,10 @@
 
   </div>
   <div class="form">
+    
+    <form #f = "ngForm" (ngSubmit)="onSubmit(f)"  action="">
+
+    </form>
 
     <ul class="tab-group">
       <li class="tab active"><a href="#signup">Registrarse</a></li>
