--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -36,6 +36,7 @@
       <div class="dropdown-menu dropdown-menu-right text-right" aria-labelledby="navbarDropdown">
         <a class="dropdown-item texto-subtitulos btn" data-toggle="collapse">Perfil</a>
         <a class="dropdown-item texto-subtitulos btn" data-toggle="collapse">Configuración</a>
+        <a *ngIf="isAdmin" class="dropdown-item texto-subtitulos btn" data-toggle="collapse" [routerLink]="['/admin']">Administrador</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item texto-subtitulos btn" (click)='logout()' data-toggle="collapse">Cerrar sesión</a>
       </div>
